# CppProjectTemplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  cmake_config.h.in  main.cpp
